--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,9 +14,10 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+
   flutter_spinkit: ^5.2.1
   google_fonts: ^6.2.1
-
+  path_provider: ^2.1.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
