--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
  # flutter_svg_provider: ^1.0.7
   flutter_svg: ^2.0.16
   lottie: ^3.3.0
+  auto_size_text: ^3.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
