--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -30,8 +30,22 @@ android {
         versionName = flutter.versionName
     }
 
+    signingConfigs{
+       debug{
+        keyAlias 'voicemateandroidkey'
+        keyPassword 'vmandroid@#4321'
+        storeFile file('voicematekey.jks')
+        storePassword 'vmandroid@#4321'
+       }
+
+    }
     buildTypes {
         release {
+            // TODO: Add your own signing config for the release build.
+            // Signing with the debug keys for now, so `flutter run --release` works.
+            signingConfig = signingConfigs.debug
+        }
+        debug {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
