--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,10 @@ dependencies:
   flutter_svg: ^2.0.16
   lottie: ^3.3.0
   auto_size_text: ^3.0.0
+  http: ^1.2.2
+  provider: ^6.1.2
+  google_sign_in_web: ^0.12.4+3
+  google_sign_in: ^6.2.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
