--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
     "name": "voicemate",
-    "short_name": "voicemate",
+    "short_name": "VoiceMate",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "A cutting-edge voice assistant application.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
