--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "voicemate",
             "request": "launch",
             "type": "dart",
-            // "args":["--web-port","8085"]
+             "args":["--web-port","5000"]
         },
         {
             "name": "voicemate (profile mode)",
