--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   provider: ^6.1.2
   google_sign_in: ^6.2.2
   cached_network_image: ^3.4.1
+  firebase_auth: ^5.4.1
+  firebase_core: ^3.10.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
