--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,11 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      # - run: npm ci && npm run build
-      - run: |
-            flutter config --enable-web
-            flutter pub get
-            flutter build web --no-tree-shake-icons
+      - run: npm ci && npm run build
+      # - run: |
+      #       flutter config --enable-web
+      #       flutter pub get
+      #       flutter build web --no-tree-shake-icons
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
