--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,9 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+          run: npm install -g firebase-tools
       # - run: npm ci && npm run build
-      - run: |
-            flutter build web --no-tree-shake-icons
+      # - run: |
+      #       flutter build web --no-tree-shake-icons
       #       flutter config --enable-web
       #       flutter pub get            
       - uses: FirebaseExtended/action-hosting-deploy@v0
