--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -6,14 +6,33 @@ on:
   push:
     branches:
       - main
+
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: actions/checkout@v4
-      # - run: npm ci && npm run build
-      - run: flutter build web --no-tree-shake-icons
-      - uses: FirebaseExtended/action-hosting-deploy@v0
+      # Step 1: Checkout the repository
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      # Step 2: Set up Flutter
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: 'latest'
+
+      # Step 3: Install dependencies
+      - name: Install Flutter dependencies
+        run: flutter pub get
+
+      # Step 4: Build the Flutter web app
+      - name: Build Flutter web app
+        run: flutter build web --no-tree-shake-icons
+
+      # Step 5: Deploy to Firebase Hosting
+      - name: Deploy to Firebase Hosting
+        uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_VOICE_MATE_860 }}
