--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -19,7 +19,18 @@ jobs:
       # Step 2: Set up Flutter with a specific version (use stable version)
       - name: Set up Flutter
         uses: subosito/flutter-action@v2  # Use v2 instead of v3.5.4
+        with:
+          flutter-version: 'stable'  # Pin the Flutter version explicitly (if needed)
 
+       # Step 3: Cache Flutter dependencies to speed up builds
+      - name: Cache Flutter dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.pub-cache  # Cache pub-cache to avoid re-fetching dependencies every time
+          key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.yaml') }}  # Cache key based on pubspec.yaml changes
+          restore-keys: |
+            ${{ runner.os }}-flutter
+            
       # Step 3: Install dependencies
       - name: Install Flutter dependencies
         run: flutter pub get
